Add Account Controller To prevent unauthourized users from using the program

--- a/LearnHub/appsettings.json
+++ b/LearnHub/appsettings.json
@@ -8,5 +8,10 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "cs": "Data Source=.;Initial Catalog=LearnHub;Integrated Security=True;Encrypt=True;Trust Server Certificate=True"
+  },
+  "JWT": {
+    "ValidISS": "http://localhost:5151/",
+    "ValidAud": "http://localhost:4200/",
+    "SecritKey": "aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa"
   }
 }
